tests/ui/unnamed-fields/restrict_anonymous_structs.stderr
error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:4:11
   |
LL | fn f() -> struct { field: u8 } {}
   |           ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:7:10
   |
LL | fn f2(a: struct { field: u8 } ) {}
   |          ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:12:12
   |
LL |     field: struct { field: u8 }
   |            ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:17:13
   |
LL |     field1: struct { field: u8 }
   |             ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:21:10
   |
LL | struct I(struct { field: u8 }, u8);
   |          ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:25:7
   |
LL |     K(struct { field: u8 }),
   |       ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous fields are not allowed outside of structs or unions
  --> $DIR/restrict_anonymous_structs.rs:28:9
   |
LL |         _ : struct { field: u8 }
   |         -^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         anonymous field declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:28:13
   |
LL |         _ : struct { field: u8 }
   |             ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous fields are not allowed outside of structs or unions
  --> $DIR/restrict_anonymous_structs.rs:33:9
   |
LL |         _ : u8
   |         -^^^^^
   |         |
   |         anonymous field declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:37:10
   |
LL | const L: struct { field: u8 } = 0;
   |          ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:40:11
   |
LL | static M: struct { field: u8 } = 0;
   |           ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:43:10
   |
LL | type N = struct { field: u8 };
   |          ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:46:6
   |
LL | impl struct { field: u8 } {}
   |      ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:51:14
   |
LL | impl Foo for struct { field: u8 } {}
   |              ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:55:13
   |
LL |     let p: [struct { field: u8 }; 1];
   |             ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:58:13
   |
LL |     let q: (struct { field: u8 }, u8);
   |             ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_structs.rs:61:19
   |
LL |     let c = || -> struct { field: u8 } {};
   |                   ^^^^^^^^^^^^^^^^^^^^ anonymous struct declared here

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:4:11
   |
LL | fn f() -> struct { field: u8 } {}
   |           ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:7:10
   |
LL | fn f2(a: struct { field: u8 } ) {}
   |          ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:12:12
   |
LL |     field: struct { field: u8 }
   |            ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:17:13
   |
LL |     field1: struct { field: u8 }
   |             ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:21:10
   |
LL | struct I(struct { field: u8 }, u8);
   |          ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:25:7
   |
LL |     K(struct { field: u8 }),
   |       ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:28:13
   |
LL |         _ : struct { field: u8 }
   |             ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:37:10
   |
LL | const L: struct { field: u8 } = 0;
   |          ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:40:11
   |
LL | static M: struct { field: u8 } = 0;
   |           ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:43:10
   |
LL | type N = struct { field: u8 };
   |          ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:46:6
   |
LL | impl struct { field: u8 } {}
   |      ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:51:14
   |
LL | impl Foo for struct { field: u8 } {}
   |              ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:55:13
   |
LL |     let p: [struct { field: u8 }; 1];
   |             ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:58:13
   |
LL |     let q: (struct { field: u8 }, u8);
   |             ^^^^^^^^^^^^^^^^^^^^

error: anonymous structs are unimplemented
  --> $DIR/restrict_anonymous_structs.rs:61:19
   |
LL |     let c = || -> struct { field: u8 } {};
   |                   ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 32 previous errors

